# TodoApi

./: README.md  pyproject.toml
todoApi/: database.py  main.py  model.py
